# personal-finance-dashboard

./: Database.py  README.md  app.py  baza1.db  input_data.py  pyproject.toml  test.py
